--- a/RmsProp.ipynb
+++ b/RmsProp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "RmsProp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP9XrttmoSiJzbLi3NXmprT",
+      "authorship_tag": "ABX9TyPkNvzNqHlojF+deWnXSYWj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -237,8 +237,35 @@
         "    return W\r\n",
         "W=initialize_weights(len(trainX[0]),L-1,10,N)"
       ],
-      "execution_count": 127,
+      "execution_count": 147,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oe69c3ozsOVT",
+        "outputId": "15d5c12b-3e70-440e-bcf7-92451968489b"
+      },
+      "source": [
+        "print(np.shape(W[0]))\r\n",
+        "print(np.shape(W[1]))\r\n",
+        "print(np.shape(W[2]))"
+      ],
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(3, 784)\n",
+            "(3, 3)\n",
+            "(10, 3)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -260,19 +287,89 @@
     {
       "cell_type": "code",
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Pm4kNoRsTVP",
+        "outputId": "9e8d40cf-29e1-4877-daf1-4d7841db0555"
+      },
+      "source": [
+        "print(np.shape(B[0]))\r\n",
+        "print(np.shape(B[1]))\r\n",
+        "print(np.shape(B[2]))"
+      ],
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(3,)\n",
+            "(3,)\n",
+            "(10,)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m6k8arhnql-L"
+      },
+      "source": [
+        "def sigmoid(a):\r\n",
+        "  h=list()\r\n",
+        "  for el in a:\r\n",
+        "    h.append(1/(1+np.exp(-el)))\r\n",
+        "  return h"
+      ],
+      "execution_count": 152,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "rqpcdsy8afvP"
       },
       "source": [
-        "def feed_forward():\r\n",
-        "    \r\n",
-        " \r\n",
-        "\r\n",
-        "\r\n",
-        "\r\n",
-        "hL=feed_forward(trainX,W,B)"
+        "def feed_forward(input,W,B,L):\r\n",
+        "    h=input\r\n",
+        "    for i in range(1,L+1):\r\n",
+        "        a=B[i-1]+np.matmul(W[i-1],h)\r\n",
+        "        h=sigmoid(a)\r\n",
+        "    return h\r\n",
+        "hL=feed_forward(trainX[0],W,B,L)"
       ],
-      "execution_count": null,
+      "execution_count": 153,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MEjOpVK_oRcZ",
+        "outputId": "b3e2c5fd-9de9-455e-fe8a-27e53d5d376d"
+      },
+      "source": [
+        "np.shape(hL)"
+      ],
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 154
+        }
+      ]
     }
   ]
 }
