--- a/RmsProp.ipynb
+++ b/RmsProp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "RmsProp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPkNvzNqHlojF+deWnXSYWj",
+      "authorship_tag": "ABX9TyPY9i7SmH7GxVb7i70oJHxk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -329,47 +329,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rqpcdsy8afvP"
+        "id": "JxOkzPYstNak"
       },
       "source": [
-        "def feed_forward(input,W,B,L):\r\n",
-        "    h=input\r\n",
-        "    for i in range(1,L+1):\r\n",
-        "        a=B[i-1]+np.matmul(W[i-1],h)\r\n",
-        "        h=sigmoid(a)\r\n",
-        "    return h\r\n",
-        "hL=feed_forward(trainX[0],W,B,L)"
+        "def softmax(a):\r\n",
+        "  h=list()\r\n",
+        "  sum=0\r\n",
+        "  for el in a:\r\n",
+        "    sum+=np.exp(el)\r\n",
+        "  for el in a:\r\n",
+        "    h.append(np.exp(el)/sum)\r\n",
+        "  return h"
       ],
-      "execution_count": 153,
+      "execution_count": 159,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MEjOpVK_oRcZ",
-        "outputId": "b3e2c5fd-9de9-455e-fe8a-27e53d5d376d"
+        "id": "rqpcdsy8afvP"
       },
       "source": [
-        "np.shape(hL)"
+        "def feed_forward(input,W,B,L):\r\n",
+        "    h=input\r\n",
+        "    for i in range(1,L):\r\n",
+        "        a=B[i-1]+np.matmul(W[i-1],h)\r\n",
+        "        h=sigmoid(a)\r\n",
+        "    a=B[L-1]+np.matmul(W[L-1],h)\r\n",
+        "    h=softmax(a)\r\n",
+        "    return h"
       ],
-      "execution_count": 154,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(10,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 154
-        }
-      ]
+      "execution_count": 163,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Or0MbClVt2RE"
+      },
+      "source": [
+        "hL=feed_forward(trainX[0],W,B,L)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
