--- a/RmsProp.ipynb
+++ b/RmsProp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "RmsProp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPY9i7SmH7GxVb7i70oJHxk",
+      "authorship_tag": "ABX9TyPGHCkimEM3BJGDcj/f/IaF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -219,7 +219,7 @@
         "#size of each hidden layer\r\n",
         "N=3"
       ],
-      "execution_count": 102,
+      "execution_count": 197,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
         "    return W\r\n",
         "W=initialize_weights(len(trainX[0]),L-1,10,N)"
       ],
-      "execution_count": 147,
+      "execution_count": 198,
       "outputs": []
     },
     {
@@ -247,14 +247,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oe69c3ozsOVT",
-        "outputId": "15d5c12b-3e70-440e-bcf7-92451968489b"
+        "outputId": "4dc6c3f7-7040-4f57-8750-a00e21ead578"
       },
       "source": [
         "print(np.shape(W[0]))\r\n",
         "print(np.shape(W[1]))\r\n",
         "print(np.shape(W[2]))"
       ],
-      "execution_count": 150,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +281,7 @@
         "    return B\r\n",
         "B= initialize_bias(len(trainX[0]),L-1,10,N)"
       ],
-      "execution_count": 109,
+      "execution_count": 200,
       "outputs": []
     },
     {
@@ -291,14 +291,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Pm4kNoRsTVP",
-        "outputId": "9e8d40cf-29e1-4877-daf1-4d7841db0555"
+        "outputId": "8941048c-7908-45ad-881b-b3abd5fa9887"
       },
       "source": [
         "print(np.shape(B[0]))\r\n",
         "print(np.shape(B[1]))\r\n",
         "print(np.shape(B[2]))"
       ],
-      "execution_count": 151,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +323,7 @@
         "    h.append(1/(1+np.exp(-el)))\r\n",
         "  return h"
       ],
-      "execution_count": 152,
+      "execution_count": 202,
       "outputs": []
     },
     {
@@ -341,7 +341,7 @@
         "    h.append(np.exp(el)/sum)\r\n",
         "  return h"
       ],
-      "execution_count": 159,
+      "execution_count": 203,
       "outputs": []
     },
     {
@@ -351,15 +351,23 @@
       },
       "source": [
         "def feed_forward(input,W,B,L):\r\n",
+        "    H=list()\r\n",
+        "    A=list()\r\n",
+        "    H.append(input)\r\n",
+        "    A.append([0])\r\n",
         "    h=input\r\n",
         "    for i in range(1,L):\r\n",
         "        a=B[i-1]+np.matmul(W[i-1],h)\r\n",
+        "        A.append(a)\r\n",
         "        h=sigmoid(a)\r\n",
+        "        H.append(h)\r\n",
         "    a=B[L-1]+np.matmul(W[L-1],h)\r\n",
-        "    h=softmax(a)\r\n",
-        "    return h"
+        "    A.append(a)\r\n",
+        "    hL=softmax(a)\r\n",
+        "    H.append(hL)\r\n",
+        "    return H,A,hL"
       ],
-      "execution_count": 163,
+      "execution_count": 209,
       "outputs": []
     },
     {
@@ -368,7 +376,74 @@
         "id": "Or0MbClVt2RE"
       },
       "source": [
-        "hL=feed_forward(trainX[0],W,B,L)"
+        "H,A,y_hat=feed_forward(trainX[0],W,B,L)"
+      ],
+      "execution_count": 210,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KS80jJtHyQa7",
+        "outputId": "c90946ee-06bc-44fa-fd52-c062228c9579"
+      },
+      "source": [
+        "print(np.shape(H[0])) #input\r\n",
+        "print(np.shape(H[1]))\r\n",
+        "print(np.shape(H[2]))\r\n",
+        "print(np.shape(H[3]))"
+      ],
+      "execution_count": 211,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(784,)\n",
+            "(3,)\n",
+            "(3,)\n",
+            "(10,)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yNkzOwa-yBim",
+        "outputId": "3f2a432f-e787-490d-b829-3d2da4ec722f"
+      },
+      "source": [
+        "print(np.shape(A[1]))\r\n",
+        "print(np.shape(A[2]))\r\n",
+        "print(np.shape(A[3]))"
+      ],
+      "execution_count": 212,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(3,)\n",
+            "(3,)\n",
+            "(10,)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0Dx7XFwoypN5"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
