--- a/RmsProp.ipynb
+++ b/RmsProp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "RmsProp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPGHCkimEM3BJGDcj/f/IaF",
+      "authorship_tag": "ABX9TyOhhMNfGDE3A+Pw/q6v6ePg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,9 +217,11 @@
         "#No of Layers\r\n",
         "L=3\r\n",
         "#size of each hidden layer\r\n",
-        "N=3"
+        "N=3\r\n",
+        "#No of classes\r\n",
+        "K=10"
       ],
-      "execution_count": 197,
+      "execution_count": 403,
       "outputs": []
     },
     {
@@ -235,9 +237,9 @@
         "        W.append([[random() for j in range(neurons_hl)]for i in range(neurons_hl)])\r\n",
         "    W.append([[random() for j in range(neurons_hl)]for i in range(n_output)])\r\n",
         "    return W\r\n",
-        "W=initialize_weights(len(trainX[0]),L-1,10,N)"
+        "W=initialize_weights(len(trainX[0]),L-1,K,N)"
       ],
-      "execution_count": 198,
+      "execution_count": 404,
       "outputs": []
     },
     {
@@ -247,14 +249,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oe69c3ozsOVT",
-        "outputId": "4dc6c3f7-7040-4f57-8750-a00e21ead578"
+        "outputId": "d804c81a-a16f-4d68-e5cc-954ebe395167"
       },
       "source": [
         "print(np.shape(W[0]))\r\n",
         "print(np.shape(W[1]))\r\n",
         "print(np.shape(W[2]))"
       ],
-      "execution_count": 199,
+      "execution_count": 405,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,9 +281,9 @@
         "        B.append([random() for i in range(neurons_hl)])\r\n",
         "    B.append([random() for i in range(n_output)])\r\n",
         "    return B\r\n",
-        "B= initialize_bias(len(trainX[0]),L-1,10,N)"
+        "B= initialize_bias(len(trainX[0]),L-1,K,N)"
       ],
-      "execution_count": 200,
+      "execution_count": 406,
       "outputs": []
     },
     {
@@ -291,14 +293,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Pm4kNoRsTVP",
-        "outputId": "8941048c-7908-45ad-881b-b3abd5fa9887"
+        "outputId": "ebf25eb3-2f55-40f5-abdc-ee8fa09314c6"
       },
       "source": [
         "print(np.shape(B[0]))\r\n",
         "print(np.shape(B[1]))\r\n",
         "print(np.shape(B[2]))"
       ],
-      "execution_count": 201,
+      "execution_count": 407,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +325,7 @@
         "    h.append(1/(1+np.exp(-el)))\r\n",
         "  return h"
       ],
-      "execution_count": 202,
+      "execution_count": 408,
       "outputs": []
     },
     {
@@ -341,7 +343,7 @@
         "    h.append(np.exp(el)/sum)\r\n",
         "  return h"
       ],
-      "execution_count": 203,
+      "execution_count": 409,
       "outputs": []
     },
     {
@@ -367,7 +369,7 @@
         "    H.append(hL)\r\n",
         "    return H,A,hL"
       ],
-      "execution_count": 209,
+      "execution_count": 495,
       "outputs": []
     },
     {
@@ -378,7 +380,7 @@
       "source": [
         "H,A,y_hat=feed_forward(trainX[0],W,B,L)"
       ],
-      "execution_count": 210,
+      "execution_count": 496,
       "outputs": []
     },
     {
@@ -387,24 +389,114 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "KS80jJtHyQa7",
-        "outputId": "c90946ee-06bc-44fa-fd52-c062228c9579"
+        "id": "YUeukkqM-7Sb",
+        "outputId": "63bbcb31-ebeb-439b-c8d0-e096c0b7aae3"
       },
       "source": [
-        "print(np.shape(H[0])) #input\r\n",
-        "print(np.shape(H[1]))\r\n",
-        "print(np.shape(H[2]))\r\n",
-        "print(np.shape(H[3]))"
+        "y_hat"
       ],
-      "execution_count": 211,
+      "execution_count": 423,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.11170689778759904,\n",
+              " 0.03809014360834538,\n",
+              " 0.07674871798560103,\n",
+              " 0.10722310807328661,\n",
+              " 0.09214987637399444,\n",
+              " 0.08403405033343538,\n",
+              " 0.09341716358617602,\n",
+              " 0.08001674603454335,\n",
+              " 0.17812498793834486,\n",
+              " 0.1384883082786738]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 423
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-zIkx-jiPvwi"
+      },
+      "source": [
+        "def cmp(e):\r\n",
+        "  g=1/(1+np.exp(-e))\r\n",
+        "  return g*(1-g)"
+      ],
+      "execution_count": 497,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YMchVQ1sOnqX"
+      },
+      "source": [
+        "def diff_sigmoid(a):\r\n",
+        "    res=list()\r\n",
+        "    for el in a:\r\n",
+        "      res.append(cmp(el))\r\n",
+        "    return res"
+      ],
+      "execution_count": 498,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Z-qUs5Es5XBR"
+      },
+      "source": [
+        "def back_propogation(H,A,y_hat,label):\r\n",
+        "    W_grad=list()\r\n",
+        "    B_grad=list()\r\n",
+        "    one_hot_y=np.zeros(K)\r\n",
+        "    one_hot_y[label]+=1\r\n",
+        "    ak_grad = y_hat-one_hot_y\r\n",
+        "    for k in range(L,0,-1):\r\n",
+        "        w_grad=np.matmul(np.matrix(ak_grad).T,np.matrix(H[k-1]))\r\n",
+        "        W_grad.append(w_grad)\r\n",
+        "        B_grad.append(ak_grad)\r\n",
+        "        if k != 1:\r\n",
+        "            h_grad=np.matmul(np.transpose(W[k-1]),ak_grad)\r\n",
+        "            ak_grad=np.multiply(h_grad,diff_sigmoid(A[k-1]))\r\n",
+        "    return W_grad,B_grad\r\n",
+        "W_grad,B_grad=back_propogation(H,A,y_hat,trainY[0])\r\n",
+        "W_grad=W_grad[::-1]\r\n",
+        "B_grad=B_grad[::-1]"
+      ],
+      "execution_count": 499,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XXsRXR5_THgA",
+        "outputId": "8ab8a52a-18b8-425b-dbd4-262fc25f1378"
+      },
+      "source": [
+        "print(np.shape(W_grad[0]))\r\n",
+        "print(np.shape(W_grad[1]))\r\n",
+        "print(np.shape(W_grad[2]))"
+      ],
+      "execution_count": 500,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(784,)\n",
-            "(3,)\n",
-            "(3,)\n",
-            "(10,)\n"
+            "(3, 784)\n",
+            "(3, 3)\n",
+            "(10, 3)\n"
           ],
           "name": "stdout"
         }
@@ -416,15 +508,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "yNkzOwa-yBim",
-        "outputId": "3f2a432f-e787-490d-b829-3d2da4ec722f"
+        "id": "z7fc10MpTJRN",
+        "outputId": "01a2c1aa-a577-4953-fdda-70e95ef36113"
       },
       "source": [
-        "print(np.shape(A[1]))\r\n",
-        "print(np.shape(A[2]))\r\n",
-        "print(np.shape(A[3]))"
+        "print(np.shape(B_grad[0]))\r\n",
+        "print(np.shape(B_grad[1]))\r\n",
+        "print(np.shape(B_grad[2]))"
       ],
-      "execution_count": 212,
+      "execution_count": 501,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,7 +532,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0Dx7XFwoypN5"
+        "id": "pE4ILtDxTdqu"
       },
       "source": [
         ""
