--- a/Que2.ipynb
+++ b/Que2.ipynb
@@ -35,7 +35,7 @@
         "import pandas as pd\r\n",
         "import random"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
       "source": [
         "from keras.datasets import fashion_mnist"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
       "source": [
         "(train_X,train_Y), (test_X,test_Y)= fashion_mnist.load_data()"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -67,12 +67,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nPCY-F81Tjx5",
-        "outputId": "14e48dac-45f1-4480-fa66-131010f69c23"
+        "outputId": "00cdca2c-cdb7-4252-b934-95d0ff44185f"
       },
       "source": [
         "train_X.shape, train_Y.shape"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -84,7 +84,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 16
         }
       ]
     },
@@ -96,7 +96,7 @@
       "source": [
         "# Preparing the data for training"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
         "train_X = train_X[:]/255\r\n",
         "test_Y = test_Y[:]/255"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
         "train_X=[train_X[i].flatten() for i in range(len(train_X))]\r\n",
         "test_X=[test_X[i].flatten() for i in range(len(test_X))]"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -130,12 +130,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hULrbWpnnTWu",
-        "outputId": "7bb885a6-6f82-4662-8ed9-89a20eaa5357"
+        "outputId": "924da9c8-b4c5-44e2-cecf-d6c70e0af5c3"
       },
       "source": [
         "np.shape(train_X), np.shape(train_Y), np.shape(test_X), np.shape(test_Y)"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -147,35 +147,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C0WmmRM4z4zL",
-        "outputId": "9dc01861-166e-49e2-bb9b-643739c2078f"
-      },
-      "source": [
-        "train_X[0].shape"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(784,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 58
+          "execution_count": 20
         }
       ]
     },
@@ -185,45 +157,14 @@
         "id": "sED-2jH13oR4"
       },
       "source": [
-        "#n = number of inputs\r\n",
+        "#N = number of inputs\r\n",
         "N = 3\r\n",
-        "#inputs = N\r\n",
         "#L = number of layers\r\n",
         "L = 3\r\n",
-        "#hidden layers = L-1"
+        "#H = number of hidden layers\r\n",
+        "Hid = L-1"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d-EGaguGRBSi"
-      },
-      "source": [
-        "# class FFNN:\r\n",
-        "#   def forward_prop(self,x):\r\n",
-        "#     for k in range(0,783):\r\n",
-        "#       self.h[k] = x[k]\r\n",
-        "#     for i in range (1,L-1):\r\n",
-        "#       self.W = np.random.randn()\r\n",
-        "#       for j in range(0,783):\r\n",
-        "#         self.a[j] = self.b + self.h[j]*self.W \r\n",
-        "#         self.h[j] = self.sigmoid(self.a[j])\r\n",
-        "#     self.W = np.random.randn()\r\n",
-        "#     for j in range(0,9):\r\n",
-        "#       self.a[j] = self.b + self.W*self.h[j]\r\n",
-        "#       self.h[j] = self.sigmoid(self.a[j])\r\n",
-        "#     return self.h\r\n",
-        "      \r\n",
-        "#   def predict(self,X):\r\n",
-        "#     Y_pred = []\r\n",
-        "#     for x in X: #x -> complete row\r\n",
-        "#       y_pred = self.forward_prop(x)\r\n",
-        "#       Y_pred.append(y_pred)\r\n",
-        "#     return np.array(Y_pred)"
-      ],
-      "execution_count": null,
+      "execution_count": 86,
       "outputs": []
     },
     {
@@ -232,10 +173,31 @@
         "id": "VojqwswC0spd"
       },
       "source": [
-        "def sigmoid(self, x):\r\n",
-        "    return 1.0/(1.0 + np.exp(-x))"
+        "def sigmoid(a):\r\n",
+        "  h = []\r\n",
+        "  for a1 in a:\r\n",
+        "    h.append(1.0/(1.0 + np.exp(-a1)))\r\n",
+        "  return h"
       ],
-      "execution_count": null,
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vz8yFN7KachD"
+      },
+      "source": [
+        "def softmax(a):\r\n",
+        "  y = []\r\n",
+        "  sum = 0\r\n",
+        "  for a1 in a:\r\n",
+        "    sum+= np.exp(a1)\r\n",
+        "  for a1 in a:\r\n",
+        "    y.append(np.exp(a1)/sum)\r\n",
+        "  return y"
+      ],
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -251,9 +213,9 @@
         "        W.append([[random.random() for j in range(neurons_hl)]for i in range(neurons_hl)])\r\n",
         "    W.append([[random.random() for j in range(neurons_hl)]for i in range(n_output)])\r\n",
         "    return W\r\n",
-        "W=initialize_weights(len(train_X[0]),L-1,10,N)"
+        "W=initialize_weights(len(train_X[0]),Hid,10,N)"
       ],
-      "execution_count": null,
+      "execution_count": 87,
       "outputs": []
     },
     {
@@ -263,12 +225,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uOB95_1W09lz",
-        "outputId": "52e3298f-835f-429b-b16c-962c1c71bb29"
+        "outputId": "ecbf8eca-044a-4ce1-e4d8-f40e33f05b5c"
       },
       "source": [
         "len(W)"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +242,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 65
+          "execution_count": 27
         }
       ]
     },
@@ -290,15 +252,15 @@
         "id": "ndolgSz_mEE1"
       },
       "source": [
-        "def initialize_bias(n_input, n_hidden_layer, n_output,neurons_hl):\r\n",
-        "    B=list()\r\n",
+        "def initialize_bias(n_input, n_hidden_layer, n_output,n_neurons):\r\n",
+        "    b=list()\r\n",
         "    for i in range(n_hidden_layer):\r\n",
-        "        B.append([random.random() for i in range(neurons_hl)])\r\n",
-        "    B.append([random.random() for i in range(n_output)])\r\n",
-        "    return B\r\n",
-        "B= initialize_bias(len(train_X[0]),L-1,10,N)"
+        "        b.append([random.random() for i in range(n_neurons)])\r\n",
+        "    b.append([random.random() for i in range(n_output)])\r\n",
+        "    return b\r\n",
+        "b = initialize_bias(len(train_X[0]),L-1,10,N)"
       ],
-      "execution_count": null,
+      "execution_count": 60,
       "outputs": []
     },
     {
@@ -308,59 +270,197 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1-au9_KfmEBi",
-        "outputId": "a1196bad-0908-44a4-c9db-4d1e1e285c29"
+        "outputId": "6f398a07-0590-4830-f0c4-8a10e7aac2f8"
       },
       "source": [
-        "B"
+        "len(b)"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[0.6284997068081365, 0.01880681584035382, 0.533683145050209],\n",
-              " [0.8021261653131291, 0.11128087231366446, 0.7424768986546513],\n",
-              " [0.5927178635677047,\n",
-              "  0.7937592299797389,\n",
-              "  0.5363484879002032,\n",
-              "  0.19679399883601378,\n",
-              "  0.28799921446791643,\n",
-              "  0.15041521976249106,\n",
-              "  0.9336767871909504,\n",
-              "  0.31925314766462143,\n",
-              "  0.04756870467304031,\n",
-              "  0.952377413584796]]"
+              "3"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 63
+          "execution_count": 38
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_PFao1Z80n5f"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eBTserjWVhSg",
+        "outputId": "e2950103-1e26-4612-b283-6bac7af0fb9c"
       },
       "source": [
-        ""
+        "b"
       ],
-      "execution_count": null,
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[0.9327478092021355, 0.6627149528718662, 0.43753020348960503],\n",
+              " [0.16234925170105974, 0.2255810667020044, 0.7838614426209409],\n",
+              " [0.8850178144595041,\n",
+              "  0.033263924031330716,\n",
+              "  0.1469846924592222,\n",
+              "  0.29985406115181223,\n",
+              "  0.4811324235841644,\n",
+              "  0.4861737829149505,\n",
+              "  0.09942125383087941,\n",
+              "  0.24784414961952073,\n",
+              "  0.843271992046654,\n",
+              "  0.8803901673473634]]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1HqE1Jhy0nv5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "70ef0bc8-49a9-4837-8a9f-dfe0c629bb10"
+      },
+      "source": [
+        "np.shape(b[0]), np.shape(b[2])"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((3,), (10,))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lz1yvps-VRiB"
+      },
+      "source": [
+        "def feed_forward_prop(input,W,b,L):\r\n",
+        "  H=[]\r\n",
+        "  A=[]\r\n",
+        "  h=input\r\n",
+        "  H.append(h)\r\n",
+        "  A.append([0])\r\n",
+        "  for i in range(1,L-1):\r\n",
+        "      a=b[i-1]+np.matmul(W[i-1],h)\r\n",
+        "      A.append(a)\r\n",
+        "      h=sigmoid(a)\r\n",
+        "      H.append(h)\r\n",
+        "  aL=b[L-1]+np.matmul(W[L-1],h)\r\n",
+        "  A.append(aL)\r\n",
+        "  hL=softmax(aL)\r\n",
+        "  H.append(hL)\r\n",
+        "  return hL"
+      ],
+      "execution_count": 77,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1HqE1Jhy0nv5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xaRIXKldWjOE",
+        "outputId": "cc9533b0-d96f-4b82-8eed-a0dc20eb1598"
       },
       "source": [
-        ""
+        "train_X[0].shape"
       ],
-      "execution_count": null,
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(784,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 100
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8s6gvlIiVReo"
+      },
+      "source": [
+        "Y_pred = list()\r\n",
+        "for i in (0,59999):\r\n",
+        "  y_hat = feed_forward_prop(train_X[i],W,b,L)\r\n",
+        "  Y_pred.append(y_hat)"
+      ],
+      "execution_count": 93,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "woFLq9oKf7iW",
+        "outputId": "de6f08d5-3458-4e44-9d35-69a512196ac9"
+      },
+      "source": [
+        "np.shape(Y_pred[0])"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/numpy/core/_asarray.py:83: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
+            "  return array(a, dtype, copy=False, order=order)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
     }
   ]
 }
