--- a/Que2.ipynb
+++ b/Que2.ipynb
@@ -370,7 +370,7 @@
         "  h=input\r\n",
         "  H.append(h)\r\n",
         "  A.append([0])\r\n",
-        "  for i in range(1,L-1):\r\n",
+        "  for i in range(1,L):\r\n",
         "      a=b[i-1]+np.matmul(W[i-1],h)\r\n",
         "      A.append(a)\r\n",
         "      h=sigmoid(a)\r\n",
@@ -381,7 +381,7 @@
         "  H.append(hL)\r\n",
         "  return hL"
       ],
-      "execution_count": 77,
+      "execution_count": 104,
       "outputs": []
     },
     {
@@ -419,48 +419,12 @@
       },
       "source": [
         "Y_pred = list()\r\n",
-        "for i in (0,59999):\r\n",
-        "  y_hat = feed_forward_prop(train_X[i],W,b,L)\r\n",
+        "for x in train_X:\r\n",
+        "  y_hat = feed_forward_prop(x,W,b,L)\r\n",
         "  Y_pred.append(y_hat)"
       ],
-      "execution_count": 93,
+      "execution_count": 110,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "woFLq9oKf7iW",
-        "outputId": "de6f08d5-3458-4e44-9d35-69a512196ac9"
-      },
-      "source": [
-        "np.shape(Y_pred[0])"
-      ],
-      "execution_count": 96,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/numpy/core/_asarray.py:83: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-            "  return array(a, dtype, copy=False, order=order)\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(3,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 96
-        }
-      ]
     }
   ]
 }
