--- a/Que2.ipynb
+++ b/Que2.ipynb
@@ -91,17 +91,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qud2gWTcTjpw"
-      },
-      "source": [
-        "# Preparing the data for training"
-      ],
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "WOvTxrV-Tjnd"
       },
       "source": [
@@ -221,34 +210,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uOB95_1W09lz",
-        "outputId": "ecbf8eca-044a-4ce1-e4d8-f40e33f05b5c"
-      },
-      "source": [
-        "len(W)"
-      ],
-      "execution_count": 27,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 27
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ndolgSz_mEE1"
       },
       "source": [
@@ -266,101 +227,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1-au9_KfmEBi",
-        "outputId": "6f398a07-0590-4830-f0c4-8a10e7aac2f8"
-      },
-      "source": [
-        "len(b)"
-      ],
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 38
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eBTserjWVhSg",
-        "outputId": "e2950103-1e26-4612-b283-6bac7af0fb9c"
-      },
-      "source": [
-        "b"
-      ],
-      "execution_count": 44,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[0.9327478092021355, 0.6627149528718662, 0.43753020348960503],\n",
-              " [0.16234925170105974, 0.2255810667020044, 0.7838614426209409],\n",
-              " [0.8850178144595041,\n",
-              "  0.033263924031330716,\n",
-              "  0.1469846924592222,\n",
-              "  0.29985406115181223,\n",
-              "  0.4811324235841644,\n",
-              "  0.4861737829149505,\n",
-              "  0.09942125383087941,\n",
-              "  0.24784414961952073,\n",
-              "  0.843271992046654,\n",
-              "  0.8803901673473634]]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 44
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1HqE1Jhy0nv5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "70ef0bc8-49a9-4837-8a9f-dfe0c629bb10"
-      },
-      "source": [
-        "np.shape(b[0]), np.shape(b[2])"
-      ],
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "((3,), (10,))"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 37
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Lz1yvps-VRiB"
       },
       "source": [
@@ -369,48 +235,18 @@
         "  A=[]\r\n",
         "  h=input\r\n",
         "  H.append(h)\r\n",
-        "  A.append([0])\r\n",
         "  for i in range(1,L):\r\n",
         "      a=b[i-1]+np.matmul(W[i-1],h)\r\n",
         "      A.append(a)\r\n",
-        "      h=sigmoid(a)\r\n",
+        "      h=softmax(a)\r\n",
         "      H.append(h)\r\n",
         "  aL=b[L-1]+np.matmul(W[L-1],h)\r\n",
-        "  A.append(aL)\r\n",
         "  hL=softmax(aL)\r\n",
-        "  H.append(hL)\r\n",
-        "  return hL"
+        "  y_hat = hL\r\n",
+        "  return y_hat"
       ],
-      "execution_count": 104,
+      "execution_count": 119,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xaRIXKldWjOE",
-        "outputId": "cc9533b0-d96f-4b82-8eed-a0dc20eb1598"
-      },
-      "source": [
-        "train_X[0].shape"
-      ],
-      "execution_count": 100,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(784,)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 100
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -423,7 +259,18 @@
         "  y_hat = feed_forward_prop(x,W,b,L)\r\n",
         "  Y_pred.append(y_hat)"
       ],
-      "execution_count": 110,
+      "execution_count": 120,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1iHZFsi0kDgq"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
